--- a/share/themes/flatmin/assets/sass/jivoo/jtk/_sidenav.scss
+++ b/share/themes/flatmin/assets/sass/jivoo/jtk/_sidenav.scss
@@ -141,6 +141,10 @@ nav {
               display: none;
             }
 
+            .icon + .label {
+              margin: 0;
+            }
+
             @media screen and (min-width: $md) {
               .label {
                 display: inline;
